[package]
name = "todo_backend"
version = "0.1.0"
authors = ["Duda Dornelles <dudassdornelles@gmail.com>"]

[dependencies]
iron = "*"
router = "*"
uuid = { version = "0.4", features = ["serde", "v4"] }
rustc-serialize = "*"
mount = "*"
unicase = "1.4.2"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
